--- a/front-end-web-main/client/package.json
+++ b/front-end-web-main/client/package.json
@@ -14,6 +14,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@lens-chain/sdk": "^1.0.3",
+    "@safe-global/api-kit": "^3.0.1",
+    "@safe-global/protocol-kit": "^6.0.4",
+    "@safe-global/types-kit": "^2.0.1",
     "axios": "^1.7.2",
     "bignumber.js": "^9.1.2",
     "dotenv": "^16.4.5",
@@ -27,6 +31,8 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "starknetkit-latest": "npm:starknetkit@^1.1.9",
+    "thirdweb": "^5.99.3",
+    "viem": "^2.29.4",
     "w3-css": "^4.1.0",
     "zustand": "^5.0.2"
   },
